fix: Fix render laziness on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,10 +9,15 @@
 }
 
 @layer base {
+  html,
+  body {
+    max-width: 100vw;
+    overflow-x: hidden;
+  }
+
   body {
     background-color: var(--color-background);
     color: var(--color-foreground);
-    overflow-x: hidden;
     font-feature-settings: "ss01", "ss02", "cv01", "cv02", "cv03";
   }
 }
